k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sms-spam-rnn
  labels:
    app: sms-spam-rnn
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sms-spam-rnn
  template:
    metadata:
      labels:
        app: sms-spam-rnn
    spec:
      containers:
        - name: sms-spam-rnn
          image: 714781437992.dkr.ecr.us-east-1.amazonaws.com/sms-spam-rnn:latest #Replace Registry id with your registry ID
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "500m"
              memory: "1Gi"
            limits:
              cpu: "1"
              memory: "2Gi"
          readinessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            initialDelaySeconds: 30
            periodSeconds: 20
