k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sms-spam-rnn-svc
spec:
  type: ClusterIP
  selector:
    app: sms-spam-rnn
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
